@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: September 16, 2009</p>
+      <p>Last Updated: October 2, 2009</p>
     </td>
   </tr>
 </table>
@@ -30,6 +30,13 @@
   <td>
     <a href="#overview">Overview</a>.<br>
     What is NuttX?  Look at all those files and features... How can it be a tiny OS?
+  </td>
+</tr>
+<tr>
+  <td valign="top" width="22"><img height="20" width="20" src="favicon.ico"></td>
+  <td>
+    <a href="#group">NuttX Discussion Group</a>.<br>
+    Do you want to talk about NuttX features?  Do you need some help?  Problems?  Bugs?
   </td>
 </tr>
 <tr>
@@ -698,6 +705,22 @@
 
 </table></center>
 
+
+<table width ="100%">
+  <tr bgcolor="#e4e4e4">
+  <td>
+    <a name="group"><h1>NuttX Discussion Group</h1></a>
+  </td>
+  </tr>
+</table>
+
+<p>
+  Most Nuttx-related discussion occurs on the <a href="http://tech.groups.yahoo.com/group/nuttx/" target="_top"><i>Yahoo!</i> NuttX group</a>.
+  You are cordially invited to <a href="http://groups.yahoo.com/group/nuttx/join" target="_top">join</a>.
+  I make a special effort to answer any questions and provide any help that I can.
+</p>
+
+
 <table width ="100%">
   <tr bgcolor="#e4e4e4">
   <td>
@@ -756,10 +779,12 @@
       A user-mode port of NuttX to the x86 Linux/Cygwin platform is available.
       The purpose of this port is primarily to support OS feature development.
     </p>
-    <p>
-      <b>STATUS:</b>
-      Does not support interrupts but is otherwise fully functional.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        Does not support interrupts but is otherwise fully functional.
+      </p>
+    </ul>
    </td>
 </tr>
 <tr>
@@ -777,10 +802,12 @@
       This port uses the <a href="http://www.spectrumdigital.com/">Spectrum Digital</a>
       evaluation board with a GNU arm-elf toolchain* under Linux or Cygwin.
     </p>
-    <p>
-      <b>STATUS:</b>
-      This port is complete, verified, and included in the initial NuttX release.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        This port is complete, verified, and included in the initial NuttX release.
+      </p>
+    </ul>
    </td>
 </tr>
 <tr>
@@ -796,22 +823,24 @@
       support is provided for the mcu123.com lpc214x evaluation board (LPC2148).
       This port also used the GNU arm-elf toolchain* under Linux or Cygwin.
     </p>
-    <p>
-      <b>STATUS:</b>
-      This port boots and passes the OS test (examples/ostest).
-      The port is complete and verified.  As of NuttX 0.3.17, the port includes:
-      timer interrupts, serial console, USB driver, and SPI-based MMC/SD card
-      support.  A verified NuttShell <a href="NuttShell.html">(NSH)</a>
-      configuration is also available.
-    </p>
-    <p>
-      <b>Development Environments:</b>
-      1) Linux with native Linux GNU toolchain, 2) Cygwin with Cygwin GNU toolchain, or 3) Cygwin
-      with Windows native toolchain (CodeSourcery or devkitARM).  A DIY toolchain for Linux
-      or Cygwin is provided by the NuttX
-      <a href="http://sourceforge.net/project/showfiles.php?group_id=189573&package_id=224585">buildroot</a>
-      package.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        This port boots and passes the OS test (examples/ostest).
+        The port is complete and verified.  As of NuttX 0.3.17, the port includes:
+        timer interrupts, serial console, USB driver, and SPI-based MMC/SD card
+        support.  A verified NuttShell <a href="NuttShell.html">(NSH)</a>
+        configuration is also available.
+      </p>
+      <p>
+        <b>Development Environments:</b>
+        1) Linux with native Linux GNU toolchain, 2) Cygwin with Cygwin GNU toolchain, or 3) Cygwin
+        with Windows native toolchain (CodeSourcery or devkitARM).  A DIY toolchain for Linux
+        or Cygwin is provided by the NuttX
+        <a href="http://sourceforge.net/project/showfiles.php?group_id=189573&package_id=224585">buildroot</a>
+        package.
+      </p>
+    </ul>
   </td>
 </tr>
 <tr>
@@ -827,23 +856,25 @@
       support is provided for the Olimex STR-P711 evaluation board.
       This port also used the GNU arm-elf toolchain* under Linux or Cygwin.
     </p>
-    <p>
-      <b>STATUS:</b>
-      Integration is complete on the basic port (boot logic, system time, serial console).
-      Two configurations have been verified: (1) The board boots and passes the OS test
-      with console output visible on UART0, and the NuttShell <a href="NuttShell.html">(NSH)</a>
-      is fully functional with interrupt driven serial console.  An SPI driver is available
-      but untested (because the Olimex card slot appears to accept only MMC cards; I have
-      only SD cards).  Additional features are needed: USB driver, MMC integration, to name two.
-    </p>
-    <p>
-      <b>Development Environments:</b>
-      1) Linux with native Linux GNU toolchain, 2) Cygwin with Cygwin GNU toolchain, or 3) Cygwin
-      with Windows native toolchain (CodeSourcery or devkitARM).  A DIY toolchain for Linux
-      or Cygwin is provided by the NuttX
-      <a href="http://sourceforge.net/project/showfiles.php?group_id=189573&package_id=224585">buildroot</a>
-      package.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        Integration is complete on the basic port (boot logic, system time, serial console).
+        Two configurations have been verified: (1) The board boots and passes the OS test
+        with console output visible on UART0, and the NuttShell <a href="NuttShell.html">(NSH)</a>
+        is fully functional with interrupt driven serial console.  An SPI driver is available
+        but untested (because the Olimex card slot appears to accept only MMC cards; I have
+        only SD cards).  Additional features are needed: USB driver, MMC integration, to name two.
+      </p>
+      <p>
+        <b>Development Environments:</b>
+        1) Linux with native Linux GNU toolchain, 2) Cygwin with Cygwin GNU toolchain, or 3) Cygwin
+        with Windows native toolchain (CodeSourcery or devkitARM).  A DIY toolchain for Linux
+        or Cygwin is provided by the NuttX
+        <a href="http://sourceforge.net/project/showfiles.php?group_id=189573&package_id=224585">buildroot</a>
+        package.
+      </p>
+    </ul>
   </td>
 </tr>
 <tr>
@@ -860,12 +891,15 @@
       This port uses the Freescale MX1ADS development board with a GNU arm-elf toolchain*
       under either Linux or Cygwin.
     </p>
-    <p>
-      <b>STATUS:</b>
-        This port is in progress.  Coding is complete on the basic port (timer, serial console, SPI).
-        Verified support for the i.MX1 will be announced in a future release of NuttX (work has
-        been temporarily stopped to support the Luminary LM3S6918).
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+          This port is in progress.  Coding is complete on the basic port (timer, serial console, SPI).
+          Verified support for the i.MX1 will be announced in a future release of NuttX (work was
+          been temporarily stopped to support the Luminary LM3S6918 and I have not yet worked around
+		  some development tool issues.).
+      </p>
+    </ul>
    </td>
 </tr>
 <tr>
@@ -884,12 +918,14 @@
       <a href="http://wiki.neurostechnology.com/index.php/Developer_Welcome">Neuros OSD</a>
       with a GNU arm-elf toolchain* under Linux or Cygwin.
     </p>
-    <p>
-      <b>STATUS:</b>
-        The basic port (timer interrupts, serial ports, network, framebuffer, etc.) is complete.
-        All implemented features have been verified with the exception of the USB device-side
-        driver; that implementation is complete but untested.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+          The basic port (timer interrupts, serial ports, network, framebuffer, etc.) is complete.
+          All implemented features have been verified with the exception of the USB device-side
+          driver; that implementation is complete but untested.
+      </p>
+    </ul>
    </td>
 </tr>
 <tr>
@@ -906,24 +942,53 @@
       This port uses the <a href=" http://www.micromint.com/">Micromint</a> Eagle-100 development
       board with a GNU arm-elf toolchain* under either Linux or Cygwin.
     </p>
-    <p>
-      <b>STATUS:</b>
-        The initial, release of this port was included in NuttX  version 0.4.6.
-        The current port includes timer, serial console, Ethernet, SSI, and microSD support.
-        There are working configurations the NuttX OS test, to run the <a href="NuttShell.html">NuttShell
-        (NSH)</a>, the NuttX networking test, and the uIP web server.
-    </p>
-    <p>
-      <b>Development Environments:</b>
-      1) Linux with native Linux GNU toolchain, 2) Cygwin with Cygwin GNU toolchain, or 3) Cygwin
-      with Windows native toolchain (CodeSourcery or devkitARM).  A DIY toolchain for Linux
-      or Cygwin is provided by the NuttX
-      <a href="http://sourceforge.net/project/showfiles.php?group_id=189573&package_id=224585">buildroot</a>
-      package.
-    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+          The initial, release of this port was included in NuttX  version 0.4.6.
+          The current port includes timer, serial console, Ethernet, SSI, and microSD support.
+          There are working configurations the NuttX OS test, to run the <a href="NuttShell.html">NuttShell
+          (NSH)</a>, the NuttX networking test, and the uIP web server.
+      </p>
+      <p>
+        <b>Development Environments:</b>
+        1) Linux with native Linux GNU toolchain, 2) Cygwin with Cygwin GNU toolchain, or 3) Cygwin
+        with Windows native toolchain (CodeSourcery or devkitARM).  A DIY toolchain for Linux
+        or Cygwin is provided by the NuttX
+        <a href="http://sourceforge.net/project/showfiles.php?group_id=189573&package_id=224585">buildroot</a>
+        package.
+      </p>
+     </ul>
    </td>
 </tr>
-
+<tr>
+  <td><br></td>
+  <td>
+    <p>
+      <b>STMIcro STM32F103x</b>.
+      This port uses the <a href=" http://www.st.com/">STMicro</a> STM3210E-EVAL
+	  development board that features the STM32F103ZET6 MCU.
+	  This port uses a GNU arm-elf toolchain* under either Linux or Cygwin (with native Windows GNU
+	  tools or Cygwin-based GNU tools).
+    </p>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        As of this writing, the basic code is in place for boot-up, serial port and
+        timer interrupt, but lots of debug work remains (and a few more drivers are
+        needed) before it is released in 0.4.12.
+      </p>
+      <p>
+        <b>Development Environments:</b>
+        1) Linux with native Linux GNU toolchain, 2) Cygwin with Cygwin GNU toolchain, or 3) Cygwin
+        with Windows native toolchain (RIDT, CodeSourcery or devkitARM).  A DIY toolchain for Linux
+        or Cygwin is provided by the NuttX
+        <a href="http://sourceforge.net/project/showfiles.php?group_id=189573&package_id=224585">buildroot</a>
+        package.
+      </p>
+     </ul>
+   </td>
+</tr>
 <tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
   <td bgcolor="#5eaee1">
@@ -938,15 +1003,17 @@
       This port uses the <a href="http://www.pjrc.com/">PJRC</a> 87C52 development system
       and the <a href="http://sdcc.sourceforge.net/">SDCC</a> toolchain under Linux or Cygwin.
     </p>
-    <p>
-     <b>STATUS:</b>
-      This port is complete but not stable with timer interrupts enabled.
-      There seems to be some issue when the stack pointer enters into the indirect IRAM
-      address space during interrupt handling.
-      This architecture has not been built in some time will likely have some compilation
-      problems because of SDCC compiler differences.
-    </p>
-   </td>
+    <ul>
+      <p>
+       <b>STATUS:</b>
+        This port is complete but not stable with timer interrupts enabled.
+        There seems to be some issue when the stack pointer enters into the indirect IRAM
+        address space during interrupt handling.
+        This architecture has not been built in some time will likely have some compilation
+        problems because of SDCC compiler differences.
+      </p>
+    </ul>
+  </td>
 </tr>
 <tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
@@ -962,18 +1029,20 @@
       This port uses the Hitachi SH-1 Low-Cost Evaluation Board (SH1_LCEVB1), US7032EVB,
       with a GNU arm-elf toolchain* under Linux or Cygwin.
     </p>
-    <p>
-     <b>STATUS:</b>
-      This port is available as of release 0.3.18 of NuttX.  The port is basically complete
-      and many examples run correctly.  However, there are remaining instabilities that
-      make the port un-usable.  The nature of these is not understood; the behavior is
-      that certain SH-1 instructions stop working as advertised.  This could be a silicon
-      problem, some pipeline issue that is not handled properly by the gcc 3.4.5 toolchain
-      (which has very limit SH-1 support to begin with), or perhaps with the CMON debugger.
-      At any rate, I have exhausted all of the energy that I am willing to put into this cool
-      old processor for the time being.
-    </p>
-   </td>
+    <ul>
+      <p>
+       <b>STATUS:</b>
+        This port is available as of release 0.3.18 of NuttX.  The port is basically complete
+        and many examples run correctly.  However, there are remaining instabilities that
+        make the port un-usable.  The nature of these is not understood; the behavior is
+        that certain SH-1 instructions stop working as advertised.  This could be a silicon
+        problem, some pipeline issue that is not handled properly by the gcc 3.4.5 toolchain
+        (which has very limit SH-1 support to begin with), or perhaps with the CMON debugger.
+        At any rate, I have exhausted all of the energy that I am willing to put into this cool
+        old processor for the time being.
+      </p>
+    </ul>
+  </td>
 </tr>
 <tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
@@ -989,26 +1058,28 @@
       This port uses the Renesas SKP16C26 Starter kit and the GNU M32C toolchain. 
       The development environment is either Linux or Cygwin under WinXP.
     </p>
-    <p>
-      <b>STATUS:</b>
-      Initial source files released in nuttx-0.4.2.
-      At this point, the port has not been integrated;	the target cannot be built
-      because the GNU <code>m16c-elf-ld</code> link fails with  the following message:
-    </p>
     <ul>
-    <code>m32c-elf-ld: BFD (GNU Binutils) 2.19 assertion fail /home/Owner/projects/nuttx/buildroot/toolchain_build_m32c/binutils-2.19/bfd/elf32-m32c.c:482</code>
-    </ul>
-    <p>Where the reference line is:</p>
-    <ul><pre>
+      <p>
+        <b>STATUS:</b>
+        Initial source files released in nuttx-0.4.2.
+        At this point, the port has not been integrated;	the target cannot be built
+        because the GNU <code>m16c-elf-ld</code> link fails with  the following message:
+      </p>
+      <ul>
+      <code>m32c-elf-ld: BFD (GNU Binutils) 2.19 assertion fail /home/Owner/projects/nuttx/buildroot/toolchain_build_m32c/binutils-2.19/bfd/elf32-m32c.c:482</code>
+      </ul>
+      <p>Where the reference line is:</p>
+      <ul><pre>
 /* If the symbol is out of range for a 16-bit address,
    we must have allocated a plt entry.  */
 BFD_ASSERT (*plt_offset != (bfd_vma) -1);
 </pre></ul>
-    <p>
-      No workaround is known at this time.  This is a show stopper for M16C for
-      the time being.
-    </p>
-   </td>
+      <p>
+        No workaround is known at this time.  This is a show stopper for M16C for
+        the time being.
+      </p>
+    </ul>
+  </td>
 </tr>
 <tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
@@ -1025,11 +1096,13 @@ BFD_ASSERT (*plt_offset != (bfd_vma) -1);
       ZDS-II Windows command line tools.
       The development environment is Cygwin under WinXP.
     </p>
-    <p>
-      <b>STATUS:</b>
-      The initial release of support for the z16f was made available in NuttX version 0.3.7.
-    </p>
-   </td>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        The initial release of support for the z16f was made available in NuttX version 0.3.7.
+      </p>
+    </ul>
+  </td>
 </tr>
 <tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
@@ -1053,14 +1126,16 @@ BFD_ASSERT (*plt_offset != (bfd_vma) -1);
       Windows command line tools.
       The development environment is Cygwin under WinXP.
     </p>
-    <p>
-      <b>STATUS:</b>
-      Integration and testing of NuttX on the  ZiLOG ez80f0910200zcog-d is complete.
-      The first integrated version was released in NuttX version 0.4.2 (with important early bugfixes
-      in 0.4.3 and 0.4.4).
-      As of this writing, that port provides basic board support with a serial console, SPI, and eZ80F91 EMAC driver.
-    </p>
-   </td>
+    <ul>
+      <p>
+        <b>STATUS:</b>
+        Integration and testing of NuttX on the  ZiLOG ez80f0910200zcog-d is complete.
+        The first integrated version was released in NuttX version 0.4.2 (with important early bugfixes
+        in 0.4.3 and 0.4.4).
+        As of this writing, that port provides basic board support with a serial console, SPI, and eZ80F91 EMAC driver.
+      </p>
+    </ul>
+  </td>
 </tr>
 <tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
@@ -1083,12 +1158,14 @@ BFD_ASSERT (*plt_offset != (bfd_vma) -1);
       and the Zilog ZDS-II Windows command line tools.
       The development environment is Cygwin under WinXP.
     </p>
-    <p>
-      <b>STATUS:</b>
-      This release has been verified only on the ZiLOG ZDS-II Z8Encore! chip simulation
-      as of nuttx-0.3.9.
-    </p>
-   </td>
+    <ul>
+       <p>
+         <b>STATUS:</b>
+         This release has been verified only on the ZiLOG ZDS-II Z8Encore! chip simulation
+         as of nuttx-0.3.9.
+       </p>
+     <ul>
+  </td>
 </tr>
 <tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
@@ -1107,12 +1184,14 @@ BFD_ASSERT (*plt_offset != (bfd_vma) -1);
       That simulator can be found in the NuttX CVS
       <a href="http://nuttx.cvs.sourceforge.net/nuttx/misc/sims/z80sim/">here</a>.
     </p>
-    <p>
-     <b>STATUS:</b>
-      This port is complete and stable to the extent that it can be tested
-      using an instruction set simulator.
-    </p>
-   </td>
+    <ul>
+      <p>
+       <b>STATUS:</b>
+        This port is complete and stable to the extent that it can be tested
+        using an instruction set simulator.
+      </p>
+    <ul>
+  </td>
 </tr>
 <tr>
   <td valign="top"><img height="20" width="20" src="favicon.ico"></td>
@@ -1517,6 +1596,14 @@ buildroot-0.1.7 2009-06-26 &lt;spudmonkey@racsa.co.cr&gt;
 
 <ul><pre>
 nuttx-0.4.12 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
+
+	* arch/arm/src/stm32 and configs/stm3210e-eval.  Added basic support for the
+	  STMicro STM32, Cortex-M3 MCU.  The specific port is to the STMicro STM3210E-EVAL
+	  development board based around the STM32F103ZET6 MCU.
+
+	  As of this writing, the basic code is in place for boot-up, serial port and
+	  timer interrupt, but lots of debug work remains (and a few more drivers are
+	  needed) before it is released in 0.4.12.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
